added more info to movies, and created basic movie template

--- a/views/partials/movie.handlebars
+++ b/views/partials/movie.handlebars
@@ -1,1 +1,14 @@
 FIXME
+<article class="movie">
+    <div class="movie-content">
+        <div class="img-container">
+            <img class="person-photo-img" src="{{url}}" />
+        </div>
+        <p class="movie-text">
+            Year: {{year}}
+        </p>
+        <p class="movie-attribution">
+            <a href="#">{{name}}</a>
+        </p>
+    </div>
+</article>
